lab-4-eks-assets/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048-ns
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
    app: game-2048
